--- a/fig/C/2-11b.tex
+++ b/fig/C/2-11b.tex
@@ -25,6 +25,6 @@
   \fill[red6](0,1.7)--(0.3,1.7)node[midway,above,text=white]{$N$}--(0.3,2.4)--(0.2,2.42)--(0.12,2.37)--(0.05,2.43)--(0,2.4)--cycle;
   \fill[red5](0.3,1.7)--(0.4,1.8)--(0.4,2.5)--(0.3,2.4)--cycle;
   \fill[lightgray](0.3,2.4)--(0.2,2.42)--(0.12,2.37)--(0.05,2.43)--(0,2.4)--(0.1,2.5)--(0.15,2.53)--(0.22,2.47)--(0.3,2.52)--(0.4,2.5)--cycle;
-  \draw[->](0.7,2.4)--++(0,-0.6);
+  \draw[<-](0.7,2.4)--++(0,-0.6);
 \end{circuitikz}
 \end{document}
