--- a/fig/C/2-33.tex
+++ b/fig/C/2-33.tex
@@ -121,5 +121,6 @@
   \draw([shift=(-45:0.1)]B)..controls++(-0.1,-0.2)and++(-0.3,0.2)..++(-1,-0.4)node[below]{$+$};
   \node at (A)[inner sep=0pt] {\posthead[darkgray]{}};
   \node at (B)[inner sep=0pt] {\posthead[red]{}};
+  \node at (-0.65,1.9) {$A$};
 \end{tikzpicture}
 \end{document}
